extra test cases added